--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -51,9 +51,14 @@
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>javax.persistence-api</artifactId>
-			<version>2.2.3</version>
+			<version>2.3.3</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
